--- a/index.ipynb
+++ b/index.ipynb
@@ -166,7 +166,7 @@
    ],
    "source": [
     "\"art vandelay\" # 'Art Vandelay'\n",
-    "title.capitalize(\"art vandelay\")"
+    "title.capitalize()"
    ]
   },
   {
