Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -185,7 +185,7 @@
    "outputs": [],
    "source": [
     "\"Ceo\" # 'CEO'\n",
-    "uppercase,"
+    "uppercase.capitalize(\"Ceo\")"
    ]
   },
   {
