Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -166,7 +166,7 @@
    ],
    "source": [
     "name =\"art vandelay\" # 'Art Vandelay'\n",
-    "title.capitalizefirstword(name)"
+    "title.capitalizefirstletter(name)"
    ]
   },
   {
