--- a/index.ipynb
+++ b/index.ipynb
@@ -166,7 +166,7 @@
    ],
    "source": [
     "title =\"art vandelay\" # 'Art Vandelay'\n",
-    "title.capitalizefirstletter()"
+    "title.capitalizefirstletter(\"art vandelay\")"
    ]
   },
   {
