Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -193,7 +193,7 @@
     }
    ],
    "source": [
-    "\"Ceo\" # 'CEO'\n",
+    "title = \"Ceo\" # 'CEO'\n",
     "capitalize.uppercase(\"Ceo\")"
    ]
   },
