--- a/index.ipynb
+++ b/index.ipynb
@@ -194,7 +194,7 @@
    ],
    "source": [
     "title = \"Ceo\" # 'CEO'\n",
-    "title.capitalize(\"Ceo\")"
+    "title.capitalize(\"Ceo)"
    ]
   },
   {
