--- a/index.ipynb
+++ b/index.ipynb
@@ -212,7 +212,7 @@
    "outputs": [],
    "source": [
     "\"art.vandelay@vandelay.co\" # False\n",
-    "str(\"art.vandelay@vandelay.co\")"
+    "str(\"art.vandelay@vandelay.com\")=Tr"
    ]
   },
   {
