--- a/index.ipynb
+++ b/index.ipynb
@@ -205,14 +205,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "can't assign to function call (<ipython-input-16-4dd44cb5e20d>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-16-4dd44cb5e20d>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    str(\"art.vandelay@vandelay.com\")=True\u001b[0m\n\u001b[0m                                         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m can't assign to function call\n"
+     ]
+    }
+   ],
    "source": [
-    "\"art.vandelay@vandelay.co\" # False\n",
-    "str(\"art.vandelay@vandelay.com\")=Tr"
+    "str =\"art.vandelay@vandelay.co\" # False\n",
+    "str(\"art.vandelay@vandelay.com\")=True\n"
    ]
   },
   {
