--- a/index.ipynb
+++ b/index.ipynb
@@ -205,21 +205,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "can't assign to function call (<ipython-input-17-823a0c06dcb6>, line 2)",
+     "evalue": "can't assign to function call (<ipython-input-18-a15f6d50aaa7>, line 2)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-17-823a0c06dcb6>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    str(\"art.vandelay@vandelay.com\")=True\u001b[0m\n\u001b[0m                                         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m can't assign to function call\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-18-a15f6d50aaa7>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    bool(\"art.vandelay@vandelay.com\")=True\u001b[0m\n\u001b[0m                                          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m can't assign to function call\n"
      ]
     }
    ],
    "source": [
     "str = \"art.vandelay@vandelay.co\" # False\n",
-    "str(\"art.vandelay@vandelay.com\")=True\n"
+    "bool(\"art.vandelay@vandelay.com\")=True\n"
    ]
   },
   {
