--- a/index.ipynb
+++ b/index.ipynb
@@ -238,8 +238,8 @@
    },
    "outputs": [],
    "source": [
-    "'vandelay.com' # 'www.vandelay.com'\n",
-    "'www.'"
+    "site = 'vandelay.com' # 'www.vandelay.com'\n",
+    "'www.'+ site"
    ]
   },
   {
