--- a/index.ipynb
+++ b/index.ipynb
@@ -289,13 +289,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'728'"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "phone=\"7285553334\" # 728\n"
+    "phone=\"7285553334\" # 728\n",
+    "phone[:3]"
    ]
   },
   {
