Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -193,7 +193,7 @@
    ],
    "source": [
     "title = \"Ceo\" # 'CEO'\n",
-    "title.capitalize()"
+    "\"Ceo\".upper() # 'CEO'\n"
    ]
   },
   {
