Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -177,22 +177,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Ceo'"
+       "'CEO'"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "title = \"Ceo\" # 'CEO'\n",
+    "\"Ceo\" # 'CEO'\n",
     "\"Ceo\".upper() # 'CEO'\n"
    ]
   },
