--- a/index.ipynb
+++ b/index.ipynb
@@ -164,8 +164,8 @@
     }
    ],
    "source": [
-    "title =\"art vandelay\" # 'Art Vandelay'\n",
-    "title.capitalize()"
+    " =\"art vandelay\" # 'Art Vandelay'\n",
+    "\"art vandelay\".title() # 'Art Vandelay'"
    ]
   },
   {
