--- a/index.ipynb
+++ b/index.ipynb
@@ -149,22 +149,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Art vandelay'"
+       "'Art Vandelay'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    " =\"art vandelay\" # 'Art Vandelay'\n",
+    "\"art vandelay\" # 'Art Vandelay'\n",
     "\"art vandelay\".title() # 'Art Vandelay'"
    ]
   },
