Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -219,7 +219,7 @@
    ],
    "source": [
     "str = \"art.vandelay@vandelay.co\" # False\n",
-    "bool(\"art.vandelay@vandelay.com\")=True\n"
+    "\"art.vandelay@vandelay.co\".endswith('.com') # False\n"
    ]
   },
   {
